# cargo-create

./: Cargo.toml  README.md
.cargo/: config.toml
src/: cargo_config.rs  cargo_toml.rs  main.rs
